# backend

./: database.db  migrate_db.py  pyproject.toml  server.py
src/: .env  ai_generator.py  app.py  utils.py
src/database/: db.py  models.py
src/routes/: challenge.py  webhooks.py
