[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clerk-backend-api>=3.0.1",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "openai>=1.83.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
